[package]
name = "kungfu_rl_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tetanes-core = "0.12"
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
accelerate-src = { version = "0.3", optional = true } # needed on macOS for linking
minifb = "0.28"                               # lightweight framebuffer for visualization
rand = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["accelerate"]
accelerate = ["candle-core/accelerate", "dep:accelerate-src"]
